--- a/attack_demos/preview_cc.html
+++ b/attack_demos/preview_cc.html
@@ -11,8 +11,8 @@
   <title>Autofill Preview Attack</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script type="text/javascript" src="/javascripts/jszip.min.js"></script>
-  <script type="text/javascript" src="/javascripts/jszip-utils.min.js"></script>
+  <script type="text/javascript" src="javascripts/jszip.min.js"></script>
+  <script type="text/javascript" src="javascripts/jszip-utils.min.js"></script>
   <style>
 
 h2{
