--- a/attack_demos/preview_cc.html
+++ b/attack_demos/preview_cc.html
@@ -33,7 +33,7 @@ border: 2px solid #4CAF50;
 <body>
   <h1 style="color:#4CAF50;">Try preview</h1>
   <h2 id="result"></h2>
-  <div>Credit Card Number Range: 4123456789000000 - 4123456789100333</div>
+  <div>Credit Card Number Range: 4123456789000000 - 4123456789099423</div>
     <div id="block_container">
       <div>
           Credit Card Name <input type="text" id="cardname" placeholder="cardname" onclick="replaceElem()">
@@ -169,7 +169,7 @@ intervalId = setInterval(function(){
 
 if (matched){
     var time_diff = end();
-    result.innerHTML = 'Matched value: '+ matched +',  Matched menu IDs: '+ results + ', Elapsed time: ' + time_diff + 's';
+    result.innerHTML = 'Matched value: 41234567890'+ matched +',  Matched menu IDs: '+ results + ', Elapsed time: ' + time_diff + 's';
   matched_flag = 1;
   clearInterval(intervalId);
 }
