--- a/attack_demos/preview_phone.html
+++ b/attack_demos/preview_phone.html
@@ -25,7 +25,7 @@ input:first-of-type {
   <body>
     <h1 style="color:#4CAF50;">Try preview</h1>
     <h2 id="result"></h2>
-    Candidate values: 1234000000 - 1234100866
+    Candidate values: [1234000000 , 1234100333]
     <div></div>
             <input name="PHONE" onclick="replaceElem()">
             <button class="button" onclick="show()">Show hidden fields</button>
