--- a/attack_demos/multiple_emails.html
+++ b/attack_demos/multiple_emails.html
@@ -31,7 +31,7 @@ border: 2px solid #4CAF50;
     <h2 id="result"></h2>
 
 <div>
-  <h2> set email address in your autofill profile from: email0 - email40462</h2>
+  <h2> set email address in your autofill profile in range [email0, email40462]</h2>
     Name<input id="name" autocomplete="name">
     <button class="button" onclick="show()" >Show hidden fields</button>
     <br>
